# MB-groep_22-23

./: CMakeLists.txt  README.md
Voorstel/: Eindpresentatie MB.pptx  MB_TOG_Voorstel.pptx  ProposalMB.docx  contract.xlsx
res/: eml_grammar.json  eml_grammar_simplified.json  json_grammar.json  json_grammar_simplified.json
src/: LR1Parser.cpp  LR1Parser.h  main.cpp
src/objects/: CFG.cpp  CFG.h  CommandLineInterface.cpp  CommandLineInterface.h  EMLGrammarGenerator.cpp  EMLGrammarGenerator.h  EMLTokenizer.cpp  EMLTokenizer.h  JsonGrammarGenerator.cpp  JsonGrammarGenerator.h  JsonSchema.cpp  JsonSchema.h  JsonTokenizer.cpp  JsonTokenizer.h  LL1Parser.cpp  LL1Parser.h  LR1Parser.cpp  LR1Parser.h  ParserComparison.cpp  ParserComparison.h  Production.cpp  Production.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  Token.cpp  Token.h
src/utilities/: utilities.cpp  utilities.h
tests/: CNFTests.cpp  CYKTests.cpp  EarleyErrorReportingTests.cpp  EarleyTests.cpp  FileConverterTests.cpp  JsonSchemaTests.cpp  JsonTokenizerTests.cpp  LL1Tests.cpp  LR1Tests.cpp  ParserComparisonTests.cpp
tests/expected/: cmlHighlight.html  expected-LR1-emlSimplifiedparseTable.txt  expected-LR1-jsonSimplifiedparseTable.txt  expected-LR1_1-SAVEDPARSER.txt  expected-LR1_1-parse.txt  expected-LR1_1.txt  expected-LR1_2-parse.txt  expected-LR1_2.txt  expected-cnf1.txt  expected-cnf2.txt  expected-cyk1.txt  expected-cyk2.txt  expected-earley1.txt  expected-earley2.txt  expected-earley3.txt  expected-earley4.txt  expected-earley5.txt  expected-earley6.txt  expected-earley_error_reporting1.txt  expected-earley_error_reporting2.txt  expected-earley_error_reporting3.txt  expected-earley_error_reporting4.txt  expected-earley_error_reporting5.txt  expected-earley_error_reporting6.txt  expected-earley_error_reporting7.txt  expected-earley_error_reporting8.txt  expected-json_tokenizer1.txt  expected-json_tokenizer2.txt  expected_EMLCONVERTED_json_grammar_simplified.eml  higlightExample.html
tests/input/: README-input-file-source.txt  cmlHighlight.cml  higlightExample.json  input-FileConverter-eml0.eml  input-FileConverter-eml1.eml  input-FileConverter-eml2.eml  input-FileConverter-json0.json  input-FileConverter-json2.json  (+67 more)
(+18 files in other folders)
